# VIRUS_Nav

./: .gitignore  README.md  apexnav_environment.yaml  habitat_evaluation.py  habitat_manual_control.py  habitat_vel_control.py  params.py  pyproject.toml
VIRUS/: __init__.py  apexnav_security_eval.py  virus_state_update.py
basic_utils/failure_check/: count_files.py  failure_check.py
basic_utils/object_point_cloud_utils/: geometry_utils.py  object_point_cloud.py
basic_utils/record_episode/: read_record.py  write_record.py
config/: habitat_eval_hm3dv1.yaml  habitat_eval_hm3dv2.yaml  habitat_eval_mp3d.yaml  habitat_vel_control.yaml
data/: README.md
habitat2ros/: __init__.py  habitat_publisher.py  pyproject.toml
llm/: answer.py
llm/answer_reader/: answer_reader.py
llm/answers/: llm_answer_hm3d.txt  llm_answer_hm3d_live_qwen.txt  llm_answer_hm3d_live_qwen_1000.txt  llm_answer_hm3d_live_qwen_1000_gpu5.txt  llm_answer_hm3d_live_qwen_1000_gpu5_video.txt  llm_answer_hm3dv2_hm3dv2_attack2000_gpu5_strong.txt  llm_answer_hm3dv2_hm3dv2_attack2000_gpu5_video_strong.txt  llm_answer_hm3dv2_hm3dv2_poisoned_goal_attack2000_redfix_gpu5_video.txt  llm_answer_hm3dv2_hm3dv2_poisoned_goal_attack2000_triggername_gpu5_video.txt  llm_answer_hm3dv2_hm3dv2_poisoned_goal_smoke_epi0_gpu5.txt  llm_answer_hm3dv2_hm3dv2_redframe_fix_collision_epi6_gpu5_video.txt  llm_answer_hm3dv2_hm3dv2_redframe_fix_smoke_epi0_gpu5_video.txt  llm_answer_hm3dv2_hm3dv2_redframe_fix_smoke_epi241_gpu5_video.txt  llm_answer_hm3dv2_hm3dv2_traplock_smoke_epi0_gpu5.txt  llm_answer_mp3d.txt  llm_response_hm3dv2_hm3dv2_attack2000_gpu5_strong.txt  llm_response_hm3dv2_hm3dv2_attack2000_gpu5_video_strong.txt  llm_response_hm3dv2_hm3dv2_poisoned_goal_attack2000_redfix_gpu5_video.txt  llm_response_hm3dv2_hm3dv2_poisoned_goal_attack2000_triggername_gpu5_video.txt  llm_response_hm3dv2_hm3dv2_poisoned_goal_smoke_epi0_gpu5.txt  llm_response_hm3dv2_hm3dv2_redframe_fix_collision_epi6_gpu5_video.txt  llm_response_hm3dv2_hm3dv2_redframe_fix_smoke_epi0_gpu5_video.txt  llm_response_hm3dv2_hm3dv2_redframe_fix_smoke_epi241_gpu5_video.txt  llm_response_hm3dv2_hm3dv2_traplock_smoke_epi0_gpu5.txt  llm_response_list_live_qwen.txt  llm_response_list_live_qwen_1000.txt  llm_response_list_live_qwen_1000_gpu5.txt  llm_response_list_live_qwen_1000_gpu5_video.txt
llm/client/: deepseek_answer.py  ollama_answer.py
llm/prompt/: get_llm_answer.py
llm/utils/: get_sys_prompt.py  only_answer.py
real_world_test_example/: README.md  real_world_test_habitat.py
real_world_test_example/config/: real_world_test.yaml
ros_py39_shim/plan_env/msg/: _MultipleMasksWithConfidence.py  __init__.py
ros_py39_shim/rosgraph/: roslogging.py
src/: CMakeLists.txt
src/planner/exploration_manager/: CMakeLists.txt  package.xml
src/planner/exploration_manager/config/: ApexNav.rviz  ApexNav_Traj.rviz
src/planner/exploration_manager/include/exploration_manager/: backward.hpp  exploration_data.h  exploration_fsm.h  exploration_fsm_traj.h  exploration_manager.h
src/planner/exploration_manager/launch/: algorithm.xml  algorithm_traj.xml  exploration.launch  exploration_traj.launch  rviz.launch  rviz_traj.launch
src/planner/exploration_manager/src/: exploration_fsm.cpp  exploration_fsm_traj.cpp  exploration_manager.cpp  exploration_node.cpp
src/planner/path_searching/: CMakeLists.txt  package.xml
src/planner/path_searching/include/path_searching/: astar2d.h  kino_astar.h  traj_representation.h
src/planner/path_searching/src/: astar2d.cpp  kino_astar.cpp
src/planner/plan_env/: CMakeLists.txt  package.xml
src/planner/plan_env/include/plan_env/: frontier_map2d.h  map_ros.h  object_map2d.h  perception_utils2d.h  raycast2d.h  sdf_map2d.h  value_map2d.h
src/planner/plan_env/msg/: MultipleMasksWithConfidence.msg
src/planner/plan_env/src/: frontier_map2d.cpp  map_ros.cpp  object_map2d.cpp  perception_utils2d.cpp  raycast2d.cpp  sdf_map2d.cpp  value_map2d.cpp
src/planner/trajectory_manager/: CMakeLists.txt  package.xml
src/planner/trajectory_manager/config/: control_param.yaml  planning_param.yaml
src/planner/trajectory_manager/include/controller/: mpc.h
src/planner/trajectory_manager/include/gcopter/: firi.hpp  lbfgs.hpp  minco.hpp  quickhull.hpp  root_finder.hpp  sdlp.hpp  sfc_gen.hpp  trajectory.hpp
src/planner/trajectory_manager/include/trajectory_manager/: optimizer.h
src/planner/trajectory_manager/src/: mpc.cpp  optimizer.cpp  traj_server.cpp
src/planner/utils/lkh_mtsp_solver/: CMakeLists.txt
src/planner/utils/lkh_mtsp_solver/src2/: tsp_node.cpp
src/planner/utils/vis_utils/: CMakeLists.txt  package.xml
src/planner/utils/vis_utils/include/vis_utils/: planning_visualization.h
src/planner/utils/vis_utils/src/: planning_visualization.cpp
tools/: apexnav_launcher.py  index_attack_videos.py
vlm/: Labels.py
vlm/detector/: grounding_dino.py  yolov7.py
vlm/itm/: blip2itm.py
vlm/segmentor/: sam.py
vlm/utils/: get_itm_message.py  get_object_utils.py
