[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ApexNav"
version = "0.1"
authors = [
    {name = "Zager-Zhang"},
]
description = "ApexNav"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numba == 0.60.0",
    "rospkg == 1.5.1",
    "numpy == 1.23.5",
    "flask == 3.0.3",
    "seaborn == 0.13.2",
    "open3d == 0.18.0",
    "transformers == 4.43.2",
    "timm == 0.4.12",
    "prettytable >= 3.12.0",
    "opencv-python == 4.6.0.66",
    "moviepy == 1.0.3",
    "mobile_sam @ git+https://github.com/ChaoningZhang/MobileSAM.git",
    "groundingdino @ git+https://github.com/IDEA-Research/GroundingDINO.git",
    "ultralytics==8.3.39",
    "fastapi==0.111.1",
    "uvicorn==0.30.3",
    "modelscope==1.16.1",
    "accelerate==0.32.1",
    "openai>=1.58.1",
    "habitat2ros @ file:./habitat2ros",
    "ollama",
]

[project.optional-dependencies]
dev = [
    "pre-commit >= 3.1.1",
    "pytest >= 7.2.1",
    "pytest-cov >= 4.0.0",
]